# ncm_dumper

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
ncm_parser/: .gitignore  Cargo.toml  README.md  rustfmt.toml
ncm_parser/src/: lib.rs
ncm_parser/tests/: test.rs
nll-facts/HELP_TEMPLATE/: subset_base.facts  use_of_var_derefs_origin.facts
nll-facts/console_outputs/: var_dropped_at.facts
nll-facts/from_iter/: cfg_edge.facts  child_path.facts  loan_invalidated_at.facts  loan_issued_at.facts  loan_killed_at.facts  path_accessed_at_base.facts  path_assigned_at_base.facts  path_is_var.facts  path_moved_at_base.facts  placeholder.facts  subset_base.facts  use_of_var_derefs_origin.facts  var_defined_at.facts  var_dropped_at.facts  var_used_at.facts
nll-facts/from_iter-{closure#0}/: var_used_at.facts
nll-facts/from_reader/: cfg_edge.facts  child_path.facts  loan_invalidated_at.facts  loan_issued_at.facts  loan_killed_at.facts  path_accessed_at_base.facts  path_assigned_at_base.facts  path_is_var.facts  path_moved_at_base.facts  placeholder.facts  subset_base.facts  use_of_var_derefs_origin.facts  var_defined_at.facts  var_dropped_at.facts  var_used_at.facts
nll-facts/from_reader-{closure#0}/: cfg_edge.facts
nll-facts/main/: cfg_edge.facts  loan_invalidated_at.facts  loan_issued_at.facts  loan_killed_at.facts  path_accessed_at_base.facts  path_assigned_at_base.facts  path_moved_at_base.facts  placeholder.facts  subset_base.facts  use_of_var_derefs_origin.facts  var_defined_at.facts  var_used_at.facts
nll-facts/main#1/: cfg_edge.facts  path_accessed_at_base.facts  path_assigned_at_base.facts  path_moved_at_base.facts  subset_base.facts  use_of_var_derefs_origin.facts  var_defined_at.facts  var_used_at.facts
nll-facts/parse_cli/: cfg_edge.facts  path_accessed_at_base.facts  path_assigned_at_base.facts  path_moved_at_base.facts  subset_base.facts  var_defined_at.facts  var_dropped_at.facts  var_used_at.facts
nll-facts/read_segment_iter/: cfg_edge.facts  loan_invalidated_at.facts  loan_issued_at.facts  path_accessed_at_base.facts  path_is_var.facts  (+8 more)
nll-facts/read_segment_iter-{closure#0}/: known_placeholder_subset.facts  path_accessed_at_base.facts  path_assigned_at_base.facts  path_moved_at_base.facts  subset_base.facts  use_of_var_derefs_origin.facts  var_used_at.facts
src/: dump.rs  main.rs
(+391 files in other folders)
