[package]
name = "ncm_dumper"
version = "0.1.0"
edition = "2021"
authors = ["Junbo Huang <342526760@qq.com>"]
description = "A multithread ncm dumper written in rust"

[dependencies]
anyhow = "1.0.75"
clap = {version = "4.4.0", features = ["derive", "unstable-v5", "wrap_help"]}
ncm_parser = { path = "./ncm_parser", features = ["serde_json"]}
rusty_pool = { version = "0.7.0", default-features = false }
walkdir = "2.3.3"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
