[package]
name = "ncm_parser"
version = "0.3.0"
edition = "2021"
authors = ["Junbo Huang <342526760@qq.com>"]
license = "MIT"
description = "A single file ncm parser"
readme = "README.md"
repository = "https://github.com/shuangsilab/ncm_dumper"
keywords = ["ncm", "dump", "parse", "parser", "reader"]
categories = ["parser-implementations"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.47"
aes = "0.8.3"
cipher = {version = "0.4.4", features = ["block-padding"]}
base64 = "0.21.3"
serde_json = {version = "1.0.105", optional = true }

[features]
default = []
serde_json = ["dep:serde_json"]

[package.metadata.docs.rs]
all-features = true